# palautusrepositorio

./: README.md
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: README.md
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry_web/: pyproject.toml
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/: AppLibrary.py  app.py
viikko3/login/src/tests/: login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/: index.py  kauppa.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: review.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py
viikko6/query-language/src/: index.py  matchers.py
