[project]
name = "viikko2-sovellus"
version = "0.1.0"
description = "Sovellus viikko 2 palautusta varten"
authors = [
    {name = "Thierry Kaoneka",email = "kaonekat@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "sqlalchemy (==1.4.54)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
